Fix header layout on small screens (#85)
* reduce header items width on small screens

* Remove unused .w-12 CSS class


---------

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -215,7 +215,7 @@ video { max-width: 100%; height: auto }
 .text-primary { color: hsl(200, 98%, 48%) }
 .text-wrap { word-wrap: break-word; }
 .tracking-wide { letter-spacing: 0.025em }
-.w-12 { width: 3rem }
+.w-10 { width: 2.5rem }
 .w-24 { min-width: 6rem }
 .w-full { width: 100% }
 .gap-5 { grid-gap: 1.25rem; gap: 1.25rem }
